src/sma-client/app/styles/concept_list.styl
#conceptlistview

    #nav_buttons
        display: block
        width: 60%

        ul
            margin: 0 auto 0 auto
            padding: 0 0 0 0

            height: 40px

            list-style-type: none
            width: 100%
            display: block

            li
                display: block
                float: left
                
                // span.text_icon
                //     display: block
                //     width: 32px
                //     font-size: 32px
                //     line-height: 32px
                //     text-align: center
 
   
    #concept_list_view.twothirds ui-block-a
        width: 60% !important
    
    #concept_content
        display: block
        position: relative
        width: 60%
        margin: 0 auto
    
    #concept_list_view.twothirds ui-block-b
        width: 40% !important
    
    #concept_list_view.twothirds ul#concept-list
        overflow-y: scroll
        position: fixed
        display: block
        top: 4.30em
        right: 0em
        height: 90%
        background-color: none
    
        .concept_link
            font-family: "Open Sans"
    
        li.concept_item h2
            margin-left: 0
            padding-left: 0
            font-weight: 100
            font-family: "Open Sans", sans-serif
            font-size: 125%
    
            border: none
    
        .ui-btn-inner, a.ui-link-inherit
            margin-left: 0
            margin-right: 0
            padding-left: 2px
            padding-right: 10px
    
        .ui-btn-up-d, .ui-btn-hover-d
            border: none
    
        .ui-btn-active-d a.concept_link
            background-color: #CCC !important
    
    
    #current_concept_img
        margin: 0 auto
        display: block
        border-radius: 15px
        border: 1px solid #FFF
    
    span.concept_language
        font-family: "Open Sans"
        color: #BBB
        font-size: 60%
    
    span.error
        font-size: 80%
        color: #900
    
    h2.concept_definition
        font-family: "Open Sans"
        font-weight: 300
        line-height: 1.1em
        font-size: 130%
        text-align: center
    
    h2.concept_value
        font-family: "Open Sans"
        font-weight: 500
        line-height: 1.2em
        font-size: 130%
        text-align: center
    
    ul#concept_definitions
    
        margin-left: 0
        padding-left: .5em
        list-style-type: none
    
        li
            list-style-type: none
            margin: 0 0
            line-height: 1.2em
    
    @media only screen and (max-width: 390px)
        #current_concept_img
            width: 150px
            height: 150px
    
    
        #concept-list
            width: 40%
    
            .concept_link
                font-family: "Open Sans"
                font-weight: 400
    
    @media only screen and (min-width: 400px)
        #current_concept_img
            width: 250px
            height: 250px
    
    @media only screen and (min-width: 500px)
        #current_concept_img
            width: 350px
            height: 350px
    
        #concept_list_view.twothirds ui-block-a
            width: 60% !important
    
        #concept_content
            width: 60%
            margin-top: 5em
    
        #concept_list_view.twothirds ui-block-b
            width: 30% !important
    
        h2.concept_definition
            font-weight: 300
            font-size: 230%
    
        h2.concept_value
            font-weight: 500
            font-size: 230%
    
        #concept-list
            width: 40%
    
            .concept_link
                font-size: 150%
                font-weight: 500
                font-family: "Open Sans"

